<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_left_arrow1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:visibility="visible"
        app:icon="?attr/homeAsUpIndicator"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/sign_up1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="229dp"
        android:backgroundTint="@color/white"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="329dp"
        android:backgroundTint="@color/white"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email1"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/edit_text_border0"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password1"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="356dp"
        android:background="@drawable/edit_text_border0"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_signup1"
        android:layout_width="339dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="452dp"
        android:backgroundTint="@color/deep_grey"
        android:text="@string/sign_up2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

