<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_left_arrow2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/purple"
        android:visibility="visible"
        app:icon="?attr/homeAsUpIndicator"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="490dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="648dp"
        android:backgroundTint="@color/purple"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="visible"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="580dp"
        android:backgroundTint="@color/purple"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>









